--- a/public/css/app.css
+++ b/public/css/app.css
@@ -1,5 +1,7 @@
 @import url(https://fonts.googleapis.com/css?family=Nunito);
-@charset "UTF-8"; /*!
+@import url(https://fonts.googleapis.com/css?family=Press+Start+2P);
+@charset "UTF-8";
+/*!
  * Bootstrap  v5.2.2 (https://getbootstrap.com/)
  * Copyright 2011-2022 The Bootstrap Authors
  * Copyright 2011-2022 Twitter, Inc.
@@ -21100,6 +21102,223 @@ readers do not read off random characters that represent icons */
   content: "\f3f6";
 }
 
+/*!***************************************************************************\
+  NES.icons
+  Version: development
+build-data()
+\*****************************************************************************/
+@font-face {
+  font-family: "nes-icons";
+  font-style: normal;
+  font-weight: 400;
+  font-display: swap;
+  src: url(/fonts/vendor/nes.icons/nes-icons.eot?3590acfccb33b4692eb8394b1767f49b);
+  src: url(/fonts/vendor/nes.icons/nes-icons.eot?3590acfccb33b4692eb8394b1767f49b) format("embedded-opentype"), url(/fonts/vendor/nes.icons/nes-icons.woff2?5e3ab894539d5ed2d15463543488c505) format("woff2"), url(/fonts/vendor/nes.icons/nes-icons.woff?4dd4b527656fbddfa8f2606e46f6dea9) format("woff"), url(/fonts/vendor/nes.icons/nes-icons.ttf?2d41ad139724e9ae03c56eb043aaee8e) format("truetype"), url(/fonts/vendor/nes.icons/nes-icons.svg?1c2aa4062554c7164b26d3e376c1d36d) format("svg");
+}
+.nes-icon {
+  display: inline-block;
+  font-family: "nes-icons";
+  font-weight: 400;
+  font-style: normal;
+  font-variant: normal;
+  text-rendering: auto;
+  line-height: 1;
+  -moz-osx-font-smoothing: grayscale;
+  -webkit-font-smoothing: none;
+}
+.nes-icon.rotate-90 {
+  transform: rotate(90deg);
+  transform-origin: 50% 50%;
+}
+.nes-icon.rotate-180 {
+  transform: rotate(180deg);
+  transform-origin: 50% 50%;
+}
+.nes-icon.rotate-270 {
+  transform: rotate(270deg);
+  transform-origin: 50% 50%;
+}
+.nes-icon.flip-horizontal, .nes-icon.flip-vertical {
+  transform-origin: 50% 50%;
+}
+.nes-icon.flip-horizontal {
+  transform: scale(-1, 1);
+}
+.nes-icon.flip-vertical {
+  transform: scale(1, -1);
+}
+.nes-icon.size-2x {
+  font-size: 2em;
+}
+.nes-icon.size-3x {
+  font-size: 3em;
+}
+.nes-icon.size-4x {
+  font-size: 4em;
+}
+.nes-icon.size-5x {
+  font-size: 5em;
+}
+.nes-icon.ban::before {
+  content: "\ea01";
+}
+.nes-icon.bars::before {
+  content: "\ea02";
+}
+.nes-icon.bomb::before {
+  content: "\ea03";
+}
+.nes-icon.calendar::before {
+  content: "\ea04";
+}
+.nes-icon.caret-down::before {
+  content: "\ea05";
+}
+.nes-icon.caret-left::before {
+  content: "\ea06";
+}
+.nes-icon.caret-right::before {
+  content: "\ea07";
+}
+.nes-icon.caret-up::before {
+  content: "\ea08";
+}
+.nes-icon.check::before {
+  content: "\ea09";
+}
+.nes-icon.check-circle::before {
+  content: "\ea0a";
+}
+.nes-icon.check-square::before {
+  content: "\ea0b";
+}
+.nes-icon.circle::before {
+  content: "\ea0c";
+}
+.nes-icon.cloud::before {
+  content: "\ea0d";
+}
+.nes-icon.cog::before {
+  content: "\ea0e";
+}
+.nes-icon.comment::before {
+  content: "\ea0f";
+}
+.nes-icon.database::before {
+  content: "\ea10";
+}
+.nes-icon.discord::before {
+  content: "\ea11";
+}
+.nes-icon.envelope::before {
+  content: "\ea12";
+}
+.nes-icon.exclamation::before {
+  content: "\ea13";
+}
+.nes-icon.exclamation-circle::before {
+  content: "\ea14";
+}
+.nes-icon.exclamation-triangle::before {
+  content: "\ea15";
+}
+.nes-icon.exclamation-triangle-alt::before {
+  content: "\ea16";
+}
+.nes-icon.eye::before {
+  content: "\ea17";
+}
+.nes-icon.eye-slash::before {
+  content: "\ea18";
+}
+.nes-icon.facebook::before {
+  content: "\ea19";
+}
+.nes-icon.facebook-square::before {
+  content: "\ea1a";
+}
+.nes-icon.file::before {
+  content: "\ea1b";
+}
+.nes-icon.folder::before {
+  content: "\ea1c";
+}
+.nes-icon.github::before {
+  content: "\ea1d";
+}
+.nes-icon.github-square::before {
+  content: "\ea1e";
+}
+.nes-icon.heart::before {
+  content: "\ea1f";
+}
+.nes-icon.linkedin::before {
+  content: "\ea20";
+}
+.nes-icon.nes::before {
+  content: "\ea21";
+}
+.nes-icon.nes-jp::before {
+  content: "\ea22";
+}
+.nes-icon.pause::before {
+  content: "\ea23";
+}
+.nes-icon.play::before {
+  content: "\ea24";
+}
+.nes-icon.search::before {
+  content: "\ea25";
+}
+.nes-icon.search-minus::before {
+  content: "\ea26";
+}
+.nes-icon.search-plus::before {
+  content: "\ea27";
+}
+.nes-icon.snes::before {
+  content: "\ea28";
+}
+.nes-icon.square::before {
+  content: "\ea29";
+}
+.nes-icon.star::before {
+  content: "\ea2a";
+}
+.nes-icon.thumbs-up::before {
+  content: "\ea2b";
+}
+.nes-icon.times::before {
+  content: "\ea2c";
+}
+.nes-icon.trophy::before {
+  content: "\ea2d";
+}
+.nes-icon.twitch::before {
+  content: "\ea2e";
+}
+.nes-icon.twitch-square::before {
+  content: "\ea2f";
+}
+.nes-icon.twitter::before {
+  content: "\ea30";
+}
+.nes-icon.twitter-square::before {
+  content: "\ea31";
+}
+.nes-icon.user::before {
+  content: "\ea32";
+}
+.nes-icon.users::before {
+  content: "\ea33";
+}
+.nes-icon.youtube::before {
+  content: "\ea34";
+}
+.nes-icon.youtube-square::before {
+  content: "\ea35";
+}
+
 @media only screen and (min-width: 981px) {
   .hide-on-desktop {
     display: none !important;
@@ -21278,5 +21497,260 @@ a {
   }
   .body-pd {
     padding-left: calc(var(--nav-width) + 188px);
+  }
+}
+.eightbit-btn {
+  background: #92cd41;
+  display: inline-block;
+  position: relative;
+  text-align: center;
+  font-size: 30px;
+  padding: 20px;
+  font-family: "Press Start 2P", cursive;
+  text-decoration: none;
+  color: white;
+  cursor: pointer;
+  box-shadow: inset -4px -4px 0px 0px #4aa52e;
+}
+.eightbit-btn:hover, .eightbit-btn:focus {
+  background: #76c442;
+  box-shadow: inset -6px -6px 0px 0px #4aa52e;
+}
+.eightbit-btn:active {
+  box-shadow: inset 4px 4px 0px 0px #4aa52e;
+}
+.eightbit-btn:before, .eightbit-btn:after {
+  content: "";
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  box-sizing: content-box;
+}
+.eightbit-btn:before {
+  top: -6px;
+  left: 0;
+  border-top: 6px black solid;
+  border-bottom: 6px black solid;
+}
+.eightbit-btn:after {
+  left: -6px;
+  top: 0;
+  border-left: 6px black solid;
+  border-right: 6px black solid;
+}
+.eightbit-btn--red {
+  background: #e76e55;
+  box-shadow: inset -4px -4px 0px 0px #8c2022;
+}
+.eightbit-btn--red:hover, .eightbit-btn--red:focus {
+  background: #ce372b;
+  box-shadow: inset -6px -6px 0px 0px #8c2022;
+}
+.eightbit-btn--red:active {
+  box-shadow: inset 4px 4px 0px 0px #8c2022;
+}
+.eightbit-btn--yellow {
+  background: #f7d51d;
+  box-shadow: inset -4px -4px 0px 0px #e59400;
+}
+.eightbit-btn--yellow:hover, .eightbit-btn--yellow:focus {
+  background: #f2c409;
+  box-shadow: inset -6px -6px 0px 0px #e59400;
+}
+.eightbit-btn--yellow:active {
+  box-shadow: inset 4px 4px 0px 0px #e59400;
+}
+.eightbit-btn--blue {
+  background: #1c9eed;
+  box-shadow: inset -4px -4px 0px 0px #105e8e;
+}
+.eightbit-btn--blue:hover, .eightbit-btn--blue:focus {
+  background: #0c89d6;
+  box-shadow: inset -6px -6px 0px 0px #105e8e;
+}
+.eightbit-btn--blue:active {
+  box-shadow: inset 4px 4px 0px 0px #105e8e;
+}
+.eightbit-btn--small {
+  font-size: 15px;
+  padding: 10px;
+}
+
+.table_8bit {
+  border-style: solid;
+  border-color: #fff;
+  border-width: 0.125em 0;
+  margin: 0 0.125em;
+  padding: 0.5em;
+}
+
+.table_8bit > tbody > tr > td {
+  border-style: solid;
+  border-color: #fff;
+  border-width: 0.125em 0.125em;
+  padding: 0.5em;
+}
+
+.section_8bit {
+  border-style: solid;
+  border-width: 0.125em 0.125em;
+  margin: 0 0.125em;
+  padding: 0.5em;
+  position: relative;
+  z-index: 1;
+  color: #fff;
+}
+.section_8bit:before {
+  border: inherit;
+  border-width: 0 0.125em;
+  content: "";
+  height: 100%;
+  left: -0.125em;
+  pointer-events: none;
+  position: absolute;
+  top: 0;
+  right: -0.125em;
+  z-index: -1;
+}
+
+.img_corner_8bit {
+  border-style: solid;
+  border-width: 0.125em 0;
+  margin: 0 0.125em;
+  position: relative;
+  z-index: 1;
+  color: #fff;
+}
+.img_corner_8bit:before {
+  border: inherit;
+  border-width: 0 0.125em;
+  content: "";
+  height: 100%;
+  left: -0.125em;
+  pointer-events: none;
+  position: absolute;
+  top: 0;
+  right: -0.125em;
+  z-index: -1;
+}
+
+.w-25 {
+  width: 25%;
+}
+.w-50 {
+  width: 50%;
+}
+.w-75 {
+  width: 75%;
+}
+.w-100 {
+  width: 100%;
+}
+
+.h-25 {
+  height: 25%;
+}
+.h-50 {
+  height: 50%;
+}
+.h-75 {
+  height: 75%;
+}
+.h-100 {
+  height: 100%;
+}
+
+*,
+*:before,
+*:after {
+  box-sizing: border-box;
+}
+
+body {
+  font-family: sans-serif;
+  max-width: 1000px;
+  margin: 0 auto;
+  padding: 30px;
+  font-family: "Maven Pro", sans-serif;
+  background-color: #333333;
+  font-family: "Press Start 2P", cursive;
+}
+
+p {
+  font-size: 1.25rem;
+  line-height: 1.75rem;
+}
+
+hr {
+  margin: 40px auto;
+  max-width: 100px;
+  display: block;
+  height: 1px;
+  border: 0;
+  border-top: 1px solid #ccc;
+  padding: 0;
+}
+
+.text-center {
+  text-align: center;
+}
+
+.text-left {
+  text-align: left;
+}
+
+.col-2 {
+  width: 50%;
+}
+
+.white {
+  color: white;
+}
+
+.background {
+  height: 100%;
+  width: 100%;
+}
+
+html {
+  height: 100%;
+  width: 100%;
+}
+
+body {
+  height: 100%;
+  width: 100%;
+}
+
+.popDownThenClose {
+  animation: popDownThenClose 1s cubic-bezier(0.36, 0.07, 0.19, 0.97) both;
+  transform: translate3d(0, 0, 0);
+}
+
+.popOut {
+  animation: popOut 1s cubic-bezier(0.36, 0.07, 0.19, 0.97) both;
+  transform: scale(0);
+}
+
+@keyframes popDownThenClose {
+  25% {
+    transform: scale(1);
+  }
+  35% {
+    transform: scale(1.4);
+  }
+  65% {
+    transform: scale(1);
+  }
+  100% {
+    transform: scale(0);
+  }
+}
+@keyframes popOut {
+  0% {
+    transform: scale(0);
+  }
+  100% {
+    transform: scale(1);
   }
 }
