--- a/resources/sass/app.scss
+++ b/resources/sass/app.scss
@@ -1,15 +1,20 @@
 // Fonts
 @import url('https://fonts.googleapis.com/css?family=Nunito');
+@import "https://fonts.googleapis.com/css?family=Press+Start+2P";
 
 // Variables
 @import 'variables';
 
 // Bootstrap
 @import '~bootstrap/scss/bootstrap';
+
+// Font Awesome Icons
 @import "~@fortawesome/fontawesome-free/scss/fontawesome";
 @import "~@fortawesome/fontawesome-free/scss/regular";
 @import "~@fortawesome/fontawesome-free/scss/solid";
 @import "~@fortawesome/fontawesome-free/scss/brands";
+
+@import "node_modules/nes.icons/scss/style.scss";
 
 @media only screen and (min-width: 981px) {
     .hide-on-desktop {
@@ -169,4 +174,320 @@ a {
     .body-pd {
         padding-left: calc(var(--nav-width) + 188px);
     }
+}
+
+
+$outline-width: 6px;
+$shadow-width: 4px;
+
+$button-background: #92cd41;
+$sec-button-background: #76c442;
+$shadow-color: #4aa52e;
+
+$alt-button-background: #f7d51d;
+$alt-sec-button-background: #f2c409;
+$alt-shadow-color: #e59400;
+
+$reset-button-background: #e76e55;
+$reset-sec-button-background: #ce372b;
+$reset-shadow-color: #8c2022;
+
+$info-button-background: #1c9eed;
+$info-sec-button-background: #0c89d6;
+$info-shadow-color: #105e8e;
+
+.eightbit-btn {
+    background: $button-background;
+    display: inline-block;
+    position: relative;
+    text-align: center;
+    font-size: 30px;
+    padding: 20px;
+    font-family: "Press Start 2P", cursive;
+    text-decoration: none;
+    color: white;
+    cursor: pointer;
+    box-shadow: inset (-$shadow-width) (-$shadow-width) 0px 0px $shadow-color;
+
+    &:hover,
+    &:focus {
+        background: $sec-button-background;
+        box-shadow: inset (-$shadow-width * 1.5) (-$shadow-width * 1.5) 0px 0px
+            $shadow-color;
+    }
+
+    &:active {
+        box-shadow: inset $shadow-width $shadow-width 0px 0px $shadow-color;
+    }
+
+    &:before,
+    &:after {
+        content: "";
+        position: absolute;
+        width: 100%;
+        height: 100%;
+        box-sizing: content-box;
+    }
+
+    &:before {
+        top: -$outline-width;
+        left: 0;
+        border-top: $outline-width black solid;
+        border-bottom: $outline-width black solid;
+    }
+
+    &:after {
+        left: -$outline-width;
+        top: 0;
+        border-left: $outline-width black solid;
+        border-right: $outline-width black solid;
+    }
+
+    &--red {
+        background: $reset-button-background;
+        box-shadow: inset (-$shadow-width) (-$shadow-width) 0px 0px
+            $reset-shadow-color;
+
+        &:hover,
+        &:focus {
+            background: $reset-sec-button-background;
+            box-shadow: inset (-$shadow-width * 1.5) (-$shadow-width * 1.5) 0px
+                0px $reset-shadow-color;
+        }
+
+        &:active {
+            box-shadow: inset $shadow-width $shadow-width 0px 0px
+                $reset-shadow-color;
+        }
+    }
+
+    &--yellow {
+        background: $alt-button-background;
+        box-shadow: inset (-$shadow-width) (-$shadow-width) 0px 0px
+            $alt-shadow-color;
+
+        &:hover,
+        &:focus {
+            background: $alt-sec-button-background;
+            box-shadow: inset (-$shadow-width * 1.5) (-$shadow-width * 1.5) 0px
+                0px $alt-shadow-color;
+        }
+
+        &:active {
+            box-shadow: inset $shadow-width $shadow-width 0px 0px
+                $alt-shadow-color;
+        }
+    }
+
+    &--blue {
+        background: $info-button-background;
+        box-shadow: inset (-$shadow-width) (-$shadow-width) 0px 0px
+            $info-shadow-color;
+
+        &:hover,
+        &:focus {
+            background: $info-sec-button-background;
+            box-shadow: inset (-$shadow-width * 1.5) (-$shadow-width * 1.5) 0px
+                0px $info-shadow-color;
+        }
+
+        &:active {
+            box-shadow: inset $shadow-width $shadow-width 0px 0px
+                $info-shadow-color;
+        }
+    }
+
+    &--small {
+        font-size: 15px;
+        padding: 10px;
+    }
+}
+
+.table_8bit{
+    border-style: solid;
+    border-color: #fff;
+    border-width: 0.125em 0;
+    margin: 0 0.125em;
+    padding: 0.5em;
+}
+
+.table_8bit > tbody > tr > td{
+    border-style: solid;
+    border-color: #fff;
+    border-width: 0.125em 0.125em;
+    padding: 0.5em;
+}
+
+.section_8bit {
+    border-style: solid;
+    border-width: 0.125em 0.125em;
+    margin: 0 0.125em;
+    padding: 0.5em;
+    position: relative;
+    z-index: 1;
+    color: #fff;
+
+    &:before {
+        border: inherit;
+        border-width: 0 0.125em;
+        content: "";
+        height: 100%;
+        left: -0.125em;
+        pointer-events: none;
+        position: absolute;
+        top: 0;
+        right: -0.125em;
+        z-index: -1;
+    }
+}
+
+.img_corner_8bit {
+    border-style: solid;
+    border-width: 0.125em 0;
+    margin: 0 0.125em;
+    position: relative;
+    z-index: 1;
+    color: #fff;
+
+    &:before {
+        border: inherit;
+        border-width: 0 0.125em;
+        content: "";
+        height: 100%;
+        left: -0.125em;
+        pointer-events: none;
+        position: absolute;
+        top: 0;
+        right: -0.125em;
+        z-index: -1;
+    }
+}
+
+.w {
+    &-25 {
+        width: 25%;
+    }
+    &-50 {
+        width: 50%;
+    }
+    &-75 {
+        width: 75%;
+    }
+    &-100 {
+        width: 100%;
+    }
+}
+
+.h {
+    &-25 {
+        height: 25%;
+    }
+    &-50 {
+        height: 50%;
+    }
+    &-75 {
+        height: 75%;
+    }
+    &-100 {
+        height: 100%;
+    }
+}
+
+////////////////////////////////////////
+// GLOBAL SETUP
+////////////////////////////////////////
+
+$wrapper-max-width: 1000px;
+
+*,
+*:before,
+*:after {
+    box-sizing: border-box;
+}
+
+body {
+    font-family: sans-serif;
+    max-width: $wrapper-max-width;
+    margin: 0 auto;
+    padding: 30px;
+    font-family: "Maven Pro", sans-serif;
+    background-color: #333333;
+    font-family: "Press Start 2P", cursive;
+}
+
+p {
+    font-size: 1.25rem;
+    line-height: 1.75rem;
+}
+
+hr {
+    margin: 40px auto;
+    max-width: 100px;
+    display: block;
+    height: 1px;
+    border: 0;
+    border-top: 1px solid #ccc;
+    padding: 0;
+}
+
+.text-center {
+    text-align: center;
+}
+
+.text-left {
+    text-align: left;
+}
+
+.col-2 {
+    width: 50%;
+}
+
+// .row {
+//     display: flex;
+// }
+
+// .row > div {
+//     margin: 10px;
+// }
+
+.white {
+    color: white;
+}
+
+.background{
+    height: 100%;
+    width: 100%;
+}
+
+html{
+    height: 100%;
+    width: 100%;
+}
+
+body{
+    height: 100%;
+    width: 100%;
+}
+
+.popDownThenClose {
+    animation: popDownThenClose 1s cubic-bezier(0.36, 0.07, 0.19, 0.97) both;
+    transform: translate3d(0, 0, 0);
+}
+
+.popOut {
+    animation: popOut 1s cubic-bezier(0.36, 0.07, 0.19, 0.97) both;
+    transform: scale(0);
+}
+
+@keyframes popDownThenClose {
+    25% { transform: scale(1); }
+    35% { transform: scale(1.4); }
+    65% { transform: scale(1); }
+    100% { transform: scale(0); }
+}
+
+
+@keyframes popOut {
+    0% { transform: scale(0); }
+    100% { transform: scale(1); }
 }
